<!--  https://asrt.gluege.boerde.de/ -->
<resources>
    <string name="app_name" translatable="false">Open PDF Reader</string>

    <string name="action_settings">Settings</string>
    <string name="qualitysettings">Quality</string>
    <string name="quality">High-quality rendering</string>
    <string name="alias">Anti-aliasing</string>
    <string name="night_mode">Night mode</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="scrollsettings">Navigation</string>
    <string name="scroll">Horizontal scrolling</string>
    <string name="snap">Center the page</string>
    <string name="fling">Quick swipe</string>

    <string name="pick_file_error">Unable to pick the file.</string>
    <string name="file_opening_error">Unable to open the file.</string>
    <string name="page_opening_error">Unable to open the page.</string>
    <string name="protected_pdf">Protected PDF</string>
    <string name="enter_password">Please enter password:</string>
    <string name="wrong_password">Wrong password.</string>
    <string name="ok" translatable="false">OK</string>

    <string name="action_about">About</string>
    <string name="version">Version</string>
    <string name="license" translatable="false">MIT License</string>
    <string name="privacy">Privacy Policy</string>
    <string name="privacy_text">The app does not collect any data. No ads, no trackers. Storage permissions are required to open PDF files on your device.</string>
    <string name="license_text" translatable="false">Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="code">Source Code</string>
</resources>